--- a/Labyrinth/Labyrinth.csproj
+++ b/Labyrinth/Labyrinth.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="LabirynthTest.cs" />
     <Compile Include="Labirynth.cs" />
+    <Compile Include="ScoreBoard.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
