Extracted Move, IsMoveValid. PlayGame and ExecuteCommand methods to new class- Engine, which is responsible for the game and player's interaction with the game. Labirynth is now accessible through indexers [,] so that the Engine can easily change the labirynth.

--- a/Labyrinth/Labyrinth.csproj
+++ b/Labyrinth/Labyrinth.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Engine.cs" />
     <Compile Include="LabirynthTest.cs" />
     <Compile Include="Labirynth.cs" />
     <Compile Include="ScoreBoard.cs" />
