Added class Player with name, moves, positions and methods to move. The Engine and ScoreBoard now use Player  field instead of many fields

--- a/Labyrinth/Labyrinth.csproj
+++ b/Labyrinth/Labyrinth.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Engine.cs" />
     <Compile Include="LabirynthTest.cs" />
     <Compile Include="Labirynth.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="ScoreBoard.cs" />
   </ItemGroup>
   <ItemGroup>
