--- a/Labyrinth/Labyrinth.csproj
+++ b/Labyrinth/Labyrinth.csproj
@@ -47,8 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Engine.cs" />
-    <Compile Include="LabirynthTest.cs" />
-    <Compile Include="Labirynth.cs" />
+    <Compile Include="LabyrinthGameDemo.cs" />
+    <Compile Include="Labyrinth.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="ScoreBoard.cs" />
   </ItemGroup>
