--- a/LabyrinthTests/LabyrinthTests.csproj
+++ b/LabyrinthTests/LabyrinthTests.csproj
@@ -51,6 +51,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="LabyrinthTests.cs" />
     <Compile Include="ScoreBoardTests.cs" />
     <Compile Include="PlayerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
